# tlg_indices

./: README.md  examples.py  file_access_examples.py  main.py  phi5_examples.py  practical_use_example.py  pyproject.toml  tlg_index_examples.py  tlgu_examples.py
src/tlg/: author_date.py  author_epithet.py  author_female.py  file_utils.py  parse_tlg_indices.py  tlg_index.py  work_numbers.py
src/tlg_indices/: author_id_to_author_name.py  file_utils.py  geography_to_author_id.py  parse_tlg_indices.py  text_cleaning.py  tlgu.py  utils.py
