[project]
name = "tlg-canon"
version = "1.0.0"
description = "Browse TLG canon data and indices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tlg_canon"]
