[project]
name = "tlg-indices"
version = "1.0.2"
description = "Browse TLG indices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tlg_indices"]


[project.urls]
Repository = "https://github.com/cltk/tlg_indices"
